2009-06-24  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-gvfs.el (tramp-gvfs-handle-make-directory): Use `dir'
	but `filename'.

2009-06-23  Miles Bader  <miles@gnu.org>

	* face-remap.el (text-scale-set): New function.

2009-06-23  Glenn Morris  <rgm@gnu.org>

	* pcmpl-rpm.el (pcomplete/rpm): Doc fix.

	* bindings.el (mode-line-modified): Fix case of "Buffer is modified".

	* textmodes/ispell.el (ispell-local-dictionary): Doc fix.

	* progmodes/gdb-mi.el (gud-remove, gud-break): Update declarations.

	* calendar/cal-dst.el (calendar-time-zone-daylight-rules):
	Simplify Persian conditionals.

	* calc/calc-graph.el (calc-graph-plot): Avoid assignment to free
	variable `filename'.

	* comint.el (comint-insert-input): Doc fix.

	* Makefile.in (ELCFILES): Fix typo in previous change.

2009-06-23  Miles Bader  <miles@gnu.org>

	* cus-start.el: Add entry for `recenter-redisplay'.

2009-06-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hooks.el (vc-stay-local-p, vc-state, vc-working-revision):
	Add an optional argument for the backend, use it instead of
	calling vc-backend.
	(vc-mode-line): Add an optional argument for the backend.  Pass
	the backend to vc-state and vc-working-revision.  Move code for
	special handling for vc-state being a buffer to ...

	* vc-rcs.el (vc-rcs-find-file-hook):
	* vc-sccs.el (vc-sccs-find-file-hook): ... here.  New functions.

	* vc-svn.el (vc-svn-state, vc-svn-dir-status, vc-svn-checkout)
	(vc-svn-print-log, vc-svn-diff): Pass 'SVN to vc-state,
	vc-stay-local-p and vc-mode-line calls.

	* vc-cvs.el (vc-cvs-state, vc-cvs-checkout, vc-cvs-print-log)
	(vc-cvs-diff, vc-cvs-annotate-command)
	(vc-cvs-make-version-backups-p, vc-cvs-stay-local-p)
	(vc-cvs-dir-status): Pass 'CVS to vc-state, vc-stay-local-p and
	vc-mode-line calls.

	* vc.el (vc-deduce-fileset): Use vc-deduce-fileset instead of
	direct comparison.
	(vc-next-action, vc-transfer-file, vc-rename-file): Also pass the
	backend when calling vc-mode-line.